# RemoteStart

./: .gitattributes  .gitignore  FSD_RemoteStart.md  README.md
.github/workflows/: release.yml
MasterHonda/main/: CMakeLists.txt  main.c  version.h  web_server.c
MasterRemote/: CMakeLists.txt  MasterHonda.ino  partitions.csv
MasterRemote/main/: CMakeLists.txt  main.c  version.h  web_server.c
SlaveHonda/: CMakeLists.txt  SlaveHonda.ino  sdkconfig.defaults
SlaveHonda/main/: main.c  version.h  web_server.c
SlaveWallas/: CMakeLists.txt  SlaveWallas.ino  SlaveWallas8266.ino  sdkconfig.defaults
SlaveWallas/main/: main.c  version.h  web_server.c
